@@ -114,8 +114,10 @@ public class SelectionViewPresenter {
             registry.getSelectionBinder().selectAllBelow(selectedItem(), lastFocusedTreeView);
         });
 
-        controller.getExpandMenuItem().setOnAction(e -> TreeUtils.expandAllBelowGivenNode(selectedItem()));
-        controller.getCollapseMenuItem().setOnAction(e -> TreeUtils.collapseAllNodesUptToGivenNode(selectedItem()));
+        controller.getExpandMenuItem().setOnAction(e -> expandAtSelectedNode());
+        controller.getCollapseMenuItem().setOnAction(e -> collapseAtSelectedNode());
+        controller.getConceptInfroamtionMenuItem().setOnAction(
+                e -> registry.getMainViewPresenter().openConceptInformationDialog(registry));
     }
 
     /**
@@ -407,15 +409,9 @@ public class SelectionViewPresenter {
         public void selectAllResults(TreeView<ConceptNode> treeView) {
             if (searchResults.isEmpty()) return;
 
-            MultipleSelectionModel<TreeItem<ConceptNode>> selectionModel = treeView.getSelectionModel();
-            selectionModel.clearSelection();
+            registry.getSelectionBinder().selectItems(searchResults, treeView);
 
-            for (TreeItem<ConceptNode> item : searchResults) {
-                TreeUtils.collapseAllNodesUptToGivenNode(item);
-                selectionModel.select(item);
-            }
-
-            treeView.scrollTo(treeView.getRow(searchResults.get(0)));
+            treeView.scrollTo(treeView.getRow(searchResults.getFirst()));
         }
 
         /**
@@ -461,7 +457,7 @@ public class SelectionViewPresenter {
     }
 
     /**
-     * Collapses all nodes in the 'is-a' TreeView up to the given node.
+     * Collapses all nodes in the 'is-a' TreeView up to the root.
      */
     public void collapseIsATree() {
         TreeUtils.collapseAllNodesUptToGivenNode(controller.getTreeViewIsA().getRoot());
@@ -475,9 +471,23 @@ public class SelectionViewPresenter {
     }
 
     /**
-     * Collapses all nodes in the 'part-of' TreeView up to the given node.
+     * Collapses all nodes in the 'part-of' TreeView up to the root.
      */
     public void collapsePartOfTree() {
         TreeUtils.collapseAllNodesUptToGivenNode(controller.getTreeViewPartOf().getRoot());
+    }
+
+    /**
+     * Expands all nodes starting at the selected node.
+     */
+    public void expandAtSelectedNode() {
+        TreeUtils.expandAllBelowGivenNode(selectedItem());
+    }
+
+    /**
+     * Collapses all nodes up to the selected node.
+     */
+    public void collapseAtSelectedNode() {
+        TreeUtils.collapseAllNodesUptToGivenNode(selectedItem());
     }
 }
